--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,18 @@
 /* FONTS */
 
-@import url("https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap');
 
 /* GLOBAL STYLES */
 
 :root {
-  --font-primary: 'Poppins', sans-serif;
-  --font-secondary: 'Arvo', serif;
-  --font-code: 'Roboto', monospace;
-  --bg-color: #00163f;
-  --font-color: #ffffff;
-  --btn-bg-color: #ffffff;
-  --accent-color: #be7efe;
-  --header-shadow: #000 0px 0px 5px;
+  --font-primary: 'Courier Prime', sans-serif;
+  --font-secondary: 'Courier Prime', serif;
+  --font-code: 'Courier Prime', monospace;
+  --bg-color: #d5ffcb;
+  --font-color: #80a586;
+  --btn-bg-color: #0878ac;
+  --accent-color: #000000;
+  --header-shadow: rgb(0, 0, 0) 0px 0px 5px;
 }
 
 * {
@@ -33,7 +33,7 @@ body {
 .container {
   display: flex;
   flex-direction: column;
-  max-width: 960px;
+  max-width: 1700px;
   margin: 0 auto;
   padding: 1rem 2rem;
 }
@@ -42,9 +42,14 @@ body {
 
 header {
   box-shadow: var(--header-shadow);
+  background-color: rgb(23, 82, 47);
 }
 
 header .container {
+  border-width: 5mm;
+  border-left-style: double;
+  border-right-style: double;
+  background-color: rgb(93, 158, 118);
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
@@ -54,6 +59,11 @@ header .container {
   display: flex;
   gap: 2rem;
   align-items: center;
+}
+
+.menu-btn {
+  filter: invert(100%);
+  -webkit-filter: invert(100%);
 }
 
 /* BUTTONS */
@@ -180,4 +190,3 @@ section {
     font-size: 1rem;
   }
 }
- 
